--- a/sass/_infos.scss
+++ b/sass/_infos.scss
@@ -42,9 +42,19 @@
     &:hover:before{
       @include def-opacity(0.5);
     }
+    @include m1000{
+      float: none;
+      width: 100%;
+      max-width: 300px;
+      margin: 0 auto 15px auto;
+      height: auto;
+    }
   }
   &_text{
     padding: 0px 0px 0px 321px;
+    @include m1000{
+      padding: 0;
+    }
   }
   &_title{
     display: block;
@@ -74,6 +84,10 @@
     font-size: 16px;
     line-height: 1.3;
     height: 141px;
+    @include m1000{
+      height: auto;
+      margin-bottom: 10px;
+    }
   }
   &_link{
     float: right;
@@ -95,6 +109,10 @@
     }
     &:hover{
       text-decoration: underline;
+    }
+    @include m1000{
+      float: none;
+      display: inline-block;
     }
   }
 }
