--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -131,6 +131,12 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
   font-weight: normal;
   font-style: normal;
 }
+.iCall-block {
+  left: auto !important;
+  right: 10px !important;
+  top: 50px !important;
+}
+
 #offset {
   position: fixed;
   right: 100px;
@@ -151,7 +157,6 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   font-family: proximanova;
   font-size: 18px;
-  min-width: 1000px;
   position: relative;
 }
 
@@ -385,7 +390,6 @@ textarea:focus {
 }
 
 .title {
-  min-width: 1000px;
   min-height: 259px;
   padding: 61px 0px 61px 0px;
   position: relative;
@@ -896,7 +900,31 @@ textarea:focus {
 
 .menutop {
   background-color: #19254b;
-  min-width: 1000px;
+}
+.menutop_back {
+  position: absolute;
+  z-index: 10;
+  left: 7px;
+  top: 9px;
+  display: inline-block;
+  visibility: hidden;
+  cursor: pointer;
+  width: 25px;
+  height: 25px;
+}
+.menutop_back__on {
+  visibility: visible;
+}
+.menutop_triangle {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 6px 12px 6px 0;
+  border-color: transparent #ffffff transparent transparent;
+  position: absolute;
+  top: 4px;
+  left: 1px;
 }
 .menutop_wrap {
   background-color: #19254b;
@@ -1310,7 +1338,7 @@ textarea:focus {
 .main-descr_descr {
   padding: 11px 20px 0px 26px;
   font-size: 17px;
-  color: #e74c3c;
+  color: #000;
   font-family: 'proximanova_bold';
   line-height: 1.2;
 }
@@ -4268,10 +4296,14 @@ textarea:focus {
 .price_descr {
   padding: 0px 0px 41px 0px;
 }
+.price_table {
+  overflow: hidden;
+}
 .price_table table {
   border-collapse: collapse;
   border-spacing: 0;
   width: 100%;
+  max-width: 100%;
   height: 100%;
   border: 2px solid white;
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤А╨░╨╝╨║╤Г ╨▓╨╛╨║╤А╤Г╨│ ╤В╨░╨▒╨╗╨╕╤Ж╤Л */
@@ -4410,6 +4442,7 @@ textarea:focus {
   * zoom: 1;
   display: block;
   padding: 68px 0px 33px 0px;
+  overflow: hidden;
 }
 .tarifs-block:after {
   clear: both;
@@ -4599,7 +4632,6 @@ textarea:focus {
   height: 1%;
 }
 .social_link {
-  display: block;
   float: left;
   text-indent: 100%;
   white-space: nowrap;
@@ -4647,6 +4679,71 @@ textarea:focus {
   white-space: nowrap;
   overflow: hidden;
   background: url("../image/dev.png") no-repeat;
+}
+
+.menu-toggle {
+  display: none;
+  height: 40px;
+  cursor: pointer;
+  box-sizing: border-box;
+  padding: 11px 0 0 15px;
+  position: relative;
+}
+.menu-toggle_text {
+  font-size: 16px;
+  line-height: 16px;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+.menu-toggle_text__on {
+  margin-left: 16px;
+}
+.menu-toggle_switch {
+  position: absolute;
+  display: block;
+  width: 30px;
+  height: 3px;
+  right: 15px;
+  top: 18px;
+  background-color: #fff;
+}
+.menu-toggle__on .menu-toggle_switch {
+  background-color: transparent;
+}
+.menu-toggle_switch:before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: -10px;
+  background-color: #fff;
+  height: 3px;
+  width: 100%;
+}
+.menu-toggle__on .menu-toggle_switch:before {
+  transform: rotate(45deg) translate(7px, 7px);
+}
+.menu-toggle_switch:after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 10px;
+  background-color: #fff;
+  height: 3px;
+  width: 100%;
+}
+.menu-toggle__on .menu-toggle_switch:after {
+  transform: rotate(-45deg) translate(7px, -7px);
+}
+.menu-toggle_switch:after, .menu-toggle_switch:before {
+  transition: all 0.3s;
+  backface-visibility: hidden;
+  border-radius: 2px;
 }
 
 /*# sourceMappingURL=all-old-ie.css.map */
