--- a/sass/_dev.scss
+++ b/sass/_dev.scss
@@ -8,4 +8,8 @@
   white-space: nowrap;
   overflow: hidden;
   background: url('../image/dev.png') no-repeat;
+  @include m1000{
+    float: none;
+    margin: 21px auto 15px auto;
+  }
 }
