--- a/sass/_form-action.scss
+++ b/sass/_form-action.scss
@@ -23,6 +23,14 @@
     float: left;
     &:first-child{
       margin: 0px;
+      @include m1000{
+        margin: 0 auto;
+      }
+    }
+    @include m1000{
+      margin: 0 auto;
+      float: none;
+      width: 230px;
     }
     input{
       font-size: 16px;
@@ -37,11 +45,15 @@
       -moz-box-shadow: inset 0px 0px 0px 1px rgba(255,0,0,1);
       box-shadow: inset 0px 0px 0px 1px rgba(255,0,0,1);
     }
+    
   }
   &_button{
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 123px;
     position: relative;
+    @include m1000{
+      margin: 0;
+    }
     input{
       width: 229px;
       height: 54px;
@@ -57,6 +69,10 @@
         cursor: pointer;
         border: 2px solid #3498db;
         background-color: #3498db;
+      }
+      @include m1000{
+        display: block;
+        margin: 0 auto;
       }
     }
     .ajax-progress{
