--- a/sass/_main1.scss
+++ b/sass/_main1.scss
@@ -8,6 +8,15 @@
     line-height: 0.74;
     padding: 0px 0px 0px 15px;
     margin: 0px 0px 44px 0px;
+    @include m1000{
+      height: auto;
+      margin-bottom: 15px;
+      font-size: 22px;
+      text-align: center;
+      border: none;
+      line-height: 1;
+    }
+    
   }
   &_wrap{
     @include clearfix();
@@ -18,6 +27,10 @@
   &_item{
     width: 25%;
     float: left;
+    @include m1000{
+      float: none;
+      width: auto;
+    }
   }
   &_title{
     height: 60px;
@@ -25,9 +38,18 @@
     font-size: 16px;
     color: #373737;
     text-transform: uppercase;
+    @include m1000{
+      height: auto;
+      text-align: center;
+      margin-bottom: 5px;
+    }
   }
   &_image{
     margin: 0px 0px 23px 0px;
+    @include m1000{
+      text-align: center;
+      margin: 0 0 10px;
+    }
   }
   &_text{
     font-family: $light;
@@ -35,5 +57,10 @@
     font-size: 14px;
     padding: 0px 15px 0px 0px;
     margin: 0px 0px 36px 0px;
+    @include m1000{
+      padding: 0;
+      text-align: center;
+      margin-bottom: 15px;
+    }
   }
 }
