--- a/sass/_price.scss
+++ b/sass/_price.scss
@@ -26,10 +26,12 @@
     padding: 0px 0px 41px 0px;
   }
   &_table{
+    overflow: hidden;
     table {
       border-collapse: collapse;
       border-spacing: 0;
       width: 100%;
+      max-width: 100%;
       height: 100%;
       border: 2px solid white; /* Прячем рамку вокруг таблицы */
       margin: 0px;
@@ -45,6 +47,9 @@
       font-family: $bold;
       font-size: 20px;
       color: #f7f5f5;
+      @include m1000{
+        padding: 5px;
+      }
     }
     td { 
       vertical-align: middle;
@@ -63,6 +68,10 @@
         font-family: $lightit;
         font-size: 14px;
       }
+      @include m1000{
+        min-width: 0;
+        padding: 5px;
+      }
     }
     tr{
       &:hover td {
@@ -72,6 +81,9 @@
   }
   &_price{
     width: 179px;
+    @include m1000{
+      width: auto;
+    }
   }
   &_link{
     margin: 35px 0px 0px 0px;
@@ -117,6 +129,12 @@
         animation-timing-function: linear;
         //animation-timing-function: cubic-bezier(.15,1.12,.49,.84);
       }
+    }
+    @include m1000{
+      box-sizing: border-box;
+      width: 100%;
+      margin-top: 15px;
+      padding-bottom: 30px;
     }
   }
 }
