--- a/sass/_tarifs-block.scss
+++ b/sass/_tarifs-block.scss
@@ -1,6 +1,10 @@
 .tarifs-block{
   @include clearfix();
   padding: 68px 0px 33px 0px;
+  overflow: hidden;
+  @include m1000{
+    padding: 27px 10px 33px 10px;
+  }
   &_title{
     font-family: $bold;
     font-size: 18px;
@@ -22,6 +26,10 @@
   &_item{
     float: left;
     width: 480px;
+    @include m1000{
+      width: 100%;
+      max-width: 480px;
+    }
   }
   &_link{
     font-size: 16px;
