--- a/css/all.css
+++ b/css/all.css
@@ -173,6 +173,7 @@ input {
   -moz-border-radius: 0px;
   -webkit-border-radius: 0px;
   border-radius: 0px;
+  -webkit-appearance: none;
 }
 
 button, input[type="reset"], input[type="button"], input[type="submit"] {
@@ -687,6 +688,7 @@ textarea:focus {
   font-size: 18;
   font-family: proximanova_bold;
   color: #ffffff;
+  -webkit-appearance: none;
 }
 .button:visited {
   color: #ffffff;
@@ -4824,10 +4826,21 @@ textarea:focus {
   font-family: proximanova_light_italic;
   font-size: 14px;
 }
+@media all and (max-width: 380px) {
+  .price_table td:nth-child(2n) {
+    font-size: 12px;
+  }
+}
 @media all and (max-width: 1000px) {
   .price_table td {
     min-width: 0;
     padding: 5px;
+  }
+}
+@media all and (max-width: 380px) {
+  .price_table td {
+    padding: 2px;
+    font-size: 12px;
   }
 }
 .price_table tr:hover td {
