--- a/sass/_button.scss
+++ b/sass/_button.scss
@@ -4,6 +4,7 @@
 	font-size: 18;
 	font-family: $bold;
 	@include link(#ffffff, #ffffff);
+  -webkit-appearance: none;
 	&__calcinfo{
 		font-family: $font;
     font-size: 16px;
