--- a/sass/_mymix.scss
+++ b/sass/_mymix.scss
@@ -3,6 +3,11 @@
     @content;
   }
 }
+@mixin m380 {
+  @if not $old-ie {
+    @media all and (max-width: 380px) { @content; }
+  }
+}
 @mixin m768 {
   @if not $old-ie {
     @media all and (max-width: 768px) { @content; }
