--- a/css/all.css
+++ b/css/all.css
@@ -4905,6 +4905,7 @@ textarea:focus {
 }
 @media all and (max-width: 1000px) {
   .price_link {
+    display: none;
     box-sizing: border-box;
     width: 100%;
     margin-top: 15px;
