--- a/sass/_price.scss
+++ b/sass/_price.scss
@@ -138,6 +138,7 @@
       }
     }
     @include m1000{
+      display: none;
       box-sizing: border-box;
       width: 100%;
       margin-top: 15px;
