--- a/css/all-old-ie.css
+++ b/css/all-old-ie.css
@@ -436,6 +436,10 @@ textarea:focus {
   background: url("../image/title-price-1920.jpg") 50% no-repeat;
   background-size: cover;
 }
+.title__actions {
+  background: url("../image/title-actions-1920.jpg") 50% no-repeat;
+  background-size: cover;
+}
 .title_h1 {
   font-family: proximanova_bold;
   font-size: 38px;
@@ -463,6 +467,21 @@ textarea:focus {
   color: #ffffff;
   font-size: 20px;
   line-height: 1.2;
+}
+.title_descr a {
+  color: #fff;
+}
+.title_descr a:visited {
+  color: #fff;
+}
+.title_descr a:hover {
+  color: #fff;
+}
+.title_descr a:active {
+  color: #fff;
+}
+.title_descr a:focus {
+  color: #fff;
 }
 .title_descr__main {
   width: 630px;
@@ -934,7 +953,7 @@ textarea:focus {
   padding: 0px;
   position: absolute;
   z-index: 5;
-  top: 55px;
+  top: 58px;
   left: 0px;
   width: 100%;
   min-width: 1000px;
@@ -999,11 +1018,12 @@ textarea:focus {
   text-transform: uppercase;
   color: #fefefe;
   display: block;
-  height: 36px;
+  height: 33px;
   text-align: center;
   text-decoration: none;
-  padding: 16px 12px 0px 12px;
+  padding: 19px 12px 0px 12px;
   border-top: 3px solid #19254b;
+  border-bottom: 3px solid #19254b;
   position: relative;
   z-index: 6;
   *zoom: expression( this.runtimeStyle.zoom="1", this.appendChild( document.createElement("small") ).className="before" );
@@ -1019,6 +1039,9 @@ textarea:focus {
 }
 .menutop_link:focus {
   color: #fefefe;
+}
+.menutop_link__action {
+  background-color: #E74C3C;
 }
 .menutop_link__active {
   border-top: 3px solid #3498db;
@@ -1181,12 +1204,25 @@ textarea:focus {
   height: 15px;
   background: url("../image/phone.png") -13px 0px no-repeat;
 }
+.address_right:after {
+  content: " ";
+  display: block;
+  position: absolute;
+  left: -1px;
+  bottom: 3px;
+  width: 15px;
+  height: 11px;
+  background: url("../image/mail.png") no-repeat;
+}
 .address_right__footer {
   padding: 0px 0px 0px 21px;
 }
 .address_right__footer:before {
   background-position: -26px 0px;
   top: 0px;
+}
+.address_right__footer:after {
+  display: none;
 }
 
 .form-discount {
@@ -2703,7 +2739,7 @@ textarea:focus {
   height: 1%;
 }
 .form-action_confirmation {
-  padding: 50px 50px 0px 50px;
+  padding: 16px 0 0;
 }
 .form-action_confirmation p {
   text-align: center;
@@ -3250,6 +3286,7 @@ textarea:focus {
   text-decoration: none;
   font-size: 14px;
   margin: 0px 0px 0px 23px;
+  padding-right: 1px;
   *zoom: expression( this.runtimeStyle.zoom="1", this.appendChild( document.createElement("small") ).className="breadcrumb_before" );
 }
 .mybreadcrumb_link:visited {
@@ -4260,6 +4297,7 @@ textarea:focus {
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
+  margin-bottom: 51px;
 }
 .price:after {
   clear: both;
@@ -4443,7 +4481,7 @@ textarea:focus {
   /* ╨Я╤А╤П╤З╨╡╨╝ ╤Б╤В╨╕╨╗╨╕ ╨╛╤В IE ╨┤╨╗╤П mac \*/
   * zoom: 1;
   display: block;
-  padding: 68px 0px 33px 0px;
+  padding: 17px 0px 33px 0px;
   overflow: hidden;
 }
 .tarifs-block:after {
