--- a/sass/_form-action.scss
+++ b/sass/_form-action.scss
@@ -9,7 +9,7 @@
     @include clearfix();
   }
   &_confirmation{
-    padding: 50px 50px 0px 50px;
+    padding: 16px 0 0;
     
     p{
       text-align: center;
