--- a/sass/_mybreadcrumb.scss
+++ b/sass/_mybreadcrumb.scss
@@ -9,6 +9,7 @@
 		text-decoration: none;
 		font-size: 14px;
 		margin: 0px 0px 0px 23px;
+		padding-right: 1px;
 		&:before{
 			background: url("../image/bread.png") -18px 0px no-repeat #fff;
 			content: "";
