arrow-link to calc

--- a/css/all.css
+++ b/css/all.css
@@ -2005,6 +2005,11 @@ textarea:focus {
   height: 18px;
   margin: 13px auto 51px auto;
   background: url(../image/arrow-bb.png) no-repeat;
+  display: block;
+  text-indent: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 13px auto 51px;
 }
 @media all and (max-width: 1000px) {
   .arrow-bb {
