--- a/sass/_arrow-bb.scss
+++ b/sass/_arrow-bb.scss
@@ -3,6 +3,11 @@
   height: 18px;
   margin: 13px auto 51px auto;
   background: url(../image/arrow-bb.png) no-repeat;
+  display: block;
+  text-indent: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 13px auto 51px;
   @include m1000{
   	margin: 13px auto 20px auto;
   }
