--- a/sass/_title.scss
+++ b/sass/_title.scss
@@ -83,6 +83,10 @@
         font-size: 22px;
       }
     }
+    .title__actions &{
+    	color: #000;
+    	border-left: 5px solid #000;
+    }
     @include m1000{
       width: 100%;
       max-width: 640px;
@@ -100,6 +104,9 @@
       color: #ffffff;
       font-size: $font_size20;
       line-height: 1.2;
+      .title__actions &{
+    		color: #000;
+   		}
       @include m1000{
         line-height: 1;
         margin: 0;
